sumo/tests/sumo/pedestrian_model/striping/errors/disconnected_trip_ignore/errors.sumo
Warning: No connection between edge 'SC_depart_connector' and edge 'CW_arrival_connector' found.
Warning: No connection between edge ':C_w1-1.00' and edge 'CW_arrival_connector' found.
Warning: Pedestrian 'p0' could not find route across junction 'C', time=8.00.
